--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -40,7 +40,7 @@ img {
 	margin: auto;
 	overflow: hidden;
 	padding: 0 2rem;
-	margin-top: 1rem;
+	margin-top: 5rem;
 	margin-bottom: 3rem;
 }
 .authforms {
@@ -48,7 +48,7 @@ img {
 	margin: auto;
 	overflow: hidden;
 	padding: 0 2rem;
-	margin-top: 2rem;
+	margin-top: 8rem;
 	margin-bottom: 3rem;
 }
 /* Text Styles*/
@@ -496,6 +496,10 @@ button {
 	.container {
 		margin-top: 8rem;
 		max-width: 400px;
+	}
+	.authforms {
+		max-width: 400px;
+		margin-top: 11rem;
 	}
 
 	.iconmargin {
